# dotrs

./: Cargo.toml  Readme.md
src/: main.rs
src/config/: definition.rs
src/git/: mod.rs
src/profiles/: definition.rs
