[package]
name = "dotrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cali = { git = "https://github.com/GamingGuy003/cali", verion = "1.3.0" }
git2 = "0.18.2"
log = "0.4.20"
pretty_env_logger = "0.5.0"
